app/assets/sass/application.scss
// global styles for <a> and <p> tags
$govuk-global-styles: true;
$govuk-new-link-styles: true;

// We can't mount GOV.UK Frontend's assets at root as it's done automatically by the extensions framework.
$govuk-assets-path: '/govuk/assets/';

// Import GOV.UK Frontend and any extension styles if extensions have been configured
@import "lib/extensions/extensions";

// Patterns that aren't in Frontend
@import "patterns/step-by-step-navigation";
@import "patterns/task-list";
@import "patterns/related-items";

// Components that aren't in Frontend
@import "components/button";
@import "components/card";
@import "components/case-notes";
@import "components/cookie-banner";
@import "components/filter";
@import "components/timeline";
@import "components/key-details-bar";
@import "components/time-autocomplete";
@import "components/cases-table";
@import "components/app-card-one-third-column-list";

@import 'accessible-autocomplete.min';

@import 'timepicker/jquery.timepicker.css';

// @import 'max-widths';
@import 'govuk-page-masthead';

// Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you

// Document icon image
.moj-timeline__document-link {
  background-image: url(/public/images/icon-document.svg) !important;
}

.govuk-tag--link {
  padding: 0
}

.govuk-tag--link a {
  line-height: 1.5em;
  color: inherit;
  padding: 6px 10px;
  display: inline-block;

  &:focus {
    color: $govuk-focus-text-colour;
  }
}

// Secondary text colour
.secondary-text-col {
  color: $govuk-secondary-text-colour;
}

.app-organisation-nav-title {
  float: right;
  padding-top: 19px;
}

.app-case-updates {
  margin-bottom: 25px;
}

@media (min-width: 1100px) {
  .app-case-updates {
    float: right;
    margin-bottom: 0;
    margin-top: 15px;
  }
}

.govuk-panel--appointment-timeline {
  color: govuk-colour("white");
  background: govuk-colour("blue");
  margin-bottom: 2rem;
  padding: 20px;
}

.note-panel {
  background-color: govuk-colour("light-grey");
  padding: 1.5rem;
  margin-bottom: 1rem;
}

.note-panel ul {
  margin-top: 0;
}

.govuk-hint-s {
  color: govuk-colour("dark-grey");
}

.app-filter {
  border: 1px solid $govuk-border-colour;
  padding: govuk-spacing(3);
}

